--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" />
+  <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" />
   <package id="Microsoft.Extensions.Configuration" version="9.0.2" manuallyInstalled="true" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="9.0.2" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="9.0.2" />
@@ -12,6 +14,7 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="9.0.2" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.2" />
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
+  <package id="R3" version="1.3.0" manuallyInstalled="true" />
   <package id="System.Collections.Immutable" version="9.0.2" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.2" />
