--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="9.0.2" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.2" />
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
+  <package id="ObservableCollections" version="3.3.3" manuallyInstalled="true" />
   <package id="R3" version="1.3.0" manuallyInstalled="true" />
   <package id="System.Collections.Immutable" version="9.0.2" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
