--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,10 @@ sysinfo.txt
 *.unitypackage.meta
 *.app
 
+# Save files
+*.save
+/~[Ss]ave/
+
 # Crashlytics generated file
 crashlytics-build.properties
 
