--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Extensions.Options" version="9.0.2" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="9.0.2" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.2" />
+  <package id="NUnit" version="4.3.2" manuallyInstalled="true" />
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
   <package id="ObservableCollections" version="3.3.3" manuallyInstalled="true" />
   <package id="R3" version="1.3.0" manuallyInstalled="true" />
