supply logic changes

--- a/Assets/Resources_moved/Configs/supply_weights_config.json
+++ b/Assets/Resources_moved/Configs/supply_weights_config.json
@@ -1,58 +1,47 @@
 {
   "WeightsArray": [
-    { "MergeableObject": { "MergeableType": "BengalCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "BengalCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "BengalCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "BengalCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "BengalCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "BengalCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "BengalCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "MaineCoonCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "MaineCoonCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "MaineCoonCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "MaineCoonCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "MaineCoonCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "MaineCoonCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "MaineCoonCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "RagdollCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "RagdollCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "RagdollCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "RagdollCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "RagdollCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "RagdollCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "RagdollCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "SphynxCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "SphynxCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "SphynxCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "SphynxCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "SphynxCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "SphynxCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "SphynxCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "BritishShorthairCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "BritishShorthairCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "BritishShorthairCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "BritishShorthairCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "BritishShorthairCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "BritishShorthairCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "BritishShorthairCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "ScottishFoldCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "ScottishFoldCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "ScottishFoldCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "ScottishFoldCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "ScottishFoldCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "ScottishFoldCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "ScottishFoldCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "OrientalCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "OrientalCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "OrientalCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "OrientalCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "OrientalCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "OrientalCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "OrientalCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "RussianBlueCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "RussianBlueCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "RussianBlueCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "RussianBlueCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "RussianBlueCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "RussianBlueCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "RussianBlueCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "TabbyCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "TabbyCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "TabbyCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "TabbyCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "TabbyCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "TabbyCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "TabbyCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "SiameseCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "SiameseCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "SiameseCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "SiameseCat", "Stage": 4 }, "Weight": 0.0 },
+    { "Item": { "MergeableType": "SiameseCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "SiameseCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "SiameseCat", "Stage": 3 }, "Weight": 0.11 },
 
-    { "MergeableObject": { "MergeableType": "PersianCat", "Stage": 1 }, "Weight": 1.0 },
-    { "MergeableObject": { "MergeableType": "PersianCat", "Stage": 2 }, "Weight": 0.33 },
-    { "MergeableObject": { "MergeableType": "PersianCat", "Stage": 3 }, "Weight": 0.11 },
-    { "MergeableObject": { "MergeableType": "PersianCat", "Stage": 4 }, "Weight": 0.0 }
+    { "Item": { "MergeableType": "PersianCat", "Stage": 1 }, "Weight": 1.0 },
+    { "Item": { "MergeableType": "PersianCat", "Stage": 2 }, "Weight": 0.33 },
+    { "Item": { "MergeableType": "PersianCat", "Stage": 3 }, "Weight": 0.11 }
   ]
 }
